fixed case study img width on mobile

--- a/src/components/CaseStudy/CaseStudy.scss
+++ b/src/components/CaseStudy/CaseStudy.scss
@@ -26,6 +26,6 @@
 
 @media (max-width: 1200px) {
     .case-study-img {
-        max-width: 100vw;
+        max-width: 80vw;
     }
 }
